apps/mimir/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mimir
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: mimir
    homelab.local/OwnedBy: ElPoshoX
