apps/mimir/base/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mimir
  namespace: mimir
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: ingress
  hostnames:
    - mimir.elposhox.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mimir-nginx
          port: 80
